--- a/TODO
+++ b/TODO
@@ -8,3 +8,5 @@ TODO - всплывающие окна как в SCADA
 TODO - leptos + plotlyjs?
 
 TODO - tauri push уведомления
+
+TODO - возможно, вынести cache внутрь ComponentCollection и передавать внутренне всем компонентам (у компонентов добавится на вход четвертый параметр)? Можно добавить параметр true, false - сохранять ли данные в кеш
