--- a/TODO
+++ b/TODO
@@ -8,3 +8,7 @@ TODO - всплывающие окна как в SCADA
 TODO - leptos + plotlyjs?
 
 TODO - tauri push уведомления
+
+TODO - заменить указатели функций на трейты Fn
+
+TODO - объединить redis-publisher и redis-subscriber
