--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
-TODO Собрать приложение leptos + tailwind + tw-elements. Собрать с помощью tauri под web и android.
-Если не получиться, то придется учить SolidJS.
-
 TODO - создать пробную мнемосхему в svg с возможностью изменения фона элемента через leptos
 
 TODO - всплывающие окна как в SCADA
@@ -11,3 +8,4 @@ TODO - tauri push уведомления
 
 TODO - заменить указатели функций на трейты Fn
 
+TODO - избавиться от unwrap()
