--- a/TODO
+++ b/TODO
@@ -12,3 +12,6 @@ TODO - избавиться от unwrap()
 
 TODO - проверить чтобы зависимости были указаны с версией (где-то tokio = {feateures = [...]})
 
+TODO - tauri вывод с камеры (WebRTC?)
+
+TODO - может не блокировать вывод в релизе в stdout?
