--- a/TODO
+++ b/TODO
@@ -5,5 +5,6 @@ TODO - tauri вывод с камеры (WebRTC?) - ошибка RtcPeerConnecti
 Добавить компоненты:
 - TODO - cmp_s7_client
 - TODO - cmp_opcua_client
+- TODO - cmp_modbustcp_server
 
 TODO - доделать cmp_http_client_esp
